website/versioned_docs/version-2.11.x/reference/subsystems/bandit.mdx
---
title: bandit
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

A tool for finding security issues in Python code (https://bandit.readthedocs.io).

Backend: <span className="color--primary">`pants.backend.python.lint.bandit`</span>

Config section: <span className="color--primary">`[bandit]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]bandit-skip`}
  env_repr="PANTS_BANDIT_SKIP"
  default_repr={`False`}
>
  Don&#x27;t use Bandit when running
  `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 lint`.
</Option>

### `args`

<Option
  cli_repr={`--bandit-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr="PANTS_BANDIT_ARGS"
  default_repr={`[]`}
>
  Arguments to pass directly to Bandit, e.g. `--bandit-args='--skip B101,B308
  --confidence'`.
</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--bandit-version=<str>`}
  env_repr="PANTS_BANDIT_VERSION"
  default_repr={`bandit>=1.7.0,<1.8`}
>
  Requirement string for the tool.
</Option>

### `extra_requirements`

<Option
  cli_repr={`--bandit-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr="PANTS_BANDIT_EXTRA_REQUIREMENTS"
  default_repr={`[\n  "setuptools",\n  "GitPython==3.1.18"\n]`}
>
  Any additional requirement strings to use with the tool. This is useful if the
  tool allows you to install plugins or if you need to constrain a dependency to
  a certain version.
</Option>

### `lockfile`

<Option
  cli_repr={`--bandit-lockfile=<str>`}
  env_repr='PANTS_BANDIT_LOCKFILE'
  default_repr={`<default>`}
>
Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.11.1/src/python/pants/backend/python/lint/bandit/bandit.lock for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds.

To use a custom lockfile, set this option to a file path relative to the build root, then run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 generate-lockfiles --resolve=bandit`.

As explained at https://www.pantsbuild.org/v2.11/docs/python-third-party-dependencies, lockfile generation via `generate-lockfiles` does not always work and you may want to manually generate the lockfile. You will want to set `[python].invalid_lockfile_behavior = 'ignore'` so that Pants does not complain about missing lockfile headers.

</Option>

### `console_script`

<Option
  cli_repr={`--bandit-console-script=<str>`}
  env_repr="PANTS_BANDIT_CONSOLE_SCRIPT"
  default_repr={`bandit`}
>
  The console script for the tool. Using this option is generally preferable to
  (and mutually exclusive with) specifying an --entry-point since console script
  names have a higher expectation of staying stable across releases of the tool.
  Usually, you will not want to change this from the default.
</Option>

### `entry_point`

<Option
  cli_repr={`--bandit-entry-point=<str>`}
  env_repr="PANTS_BANDIT_ENTRY_POINT"
  default_repr={`None`}
>
  The entry point for the tool. Generally you only want to use this option if
  the tool does not offer a --console-script (which this option is mutually
  exclusive with). Usually, you will not want to change this from the default.
</Option>

### `config`

<Option
  cli_repr={`--bandit-config=<file_option>`}
  env_repr="PANTS_BANDIT_CONFIG"
  default_repr={`None`}
>
  Path to a Bandit YAML config file
  (https://bandit.readthedocs.io/en/latest/config.html).
</Option>

## Deprecated options

None

</span>

